Final status: Liquibase xml needs to be updated.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,22 @@ server.port=8080
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sfl_assessment?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+spring.liquibase.url=${spring.datasource.url}
+spring.liquibase.user=${spring.datasource.username}
+spring.liquibase.password=${spring.datasource.password}
+
 
 # Show or not log for each sql query
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, none, update, validate)
-spring.jpa.hibernate.ddl-auto=create
-
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-# stripped before adding them to the entity manager)
+spring.jpa.hibernate.ddl-auto=update
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -27,4 +30,5 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # App specific system configs
-system.isDeleteAllowed=false
+jwt.token.secret=fhsdlkjfhalweufhakswehfkjasdh
+jwt.token.expiredInMillis=3600000
